roughlike_making_start_11월6일
아마도 내일까지는 뼈대 잡는 작업만 하게 될 것 같다.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nodejs",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,5 +14,8 @@
     "chalk": "^5.3.0",
     "figlet": "^1.8.0",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
